--- a/IOSGameHw04/Info.plist
+++ b/IOSGameHw04/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Maplestory Simulator</string>
+	<string>Maplestory Othello</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -20,10 +20,14 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>GADApplicationIdentifier</key>
+	<string>ca-app-pub-5198827116430123~6803126937</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>需要取得相簿權限</string>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>您的數據將用於向您投放個性化廣告</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>SNsanafonmaru.ttf</string>
